--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7015,7 +7015,7 @@ msgstr "函数"
 
 #: libraries/rte/rte_triggers.lib.php:89
 msgid "Sorry, we failed to restore the dropped trigger."
-msgstr ""
+msgstr "抱歉，恢复已删除的触发器失败。"
 
 #: libraries/rte/rte_triggers.lib.php:94
 #, fuzzy, php-format
