--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7049,7 +7049,7 @@ msgstr "请选择一个有效的触发时机"
 
 #: libraries/rte/rte_triggers.lib.php:413
 msgid "You must provide a valid event for the trigger"
-msgstr ""
+msgstr "请选择一个有效的触发事件"
 
 #: libraries/rte/rte_triggers.lib.php:419
 #, fuzzy
