--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:21+0200\n"
+"PO-Revision-Date: 2011-08-10 11:22+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -7058,7 +7058,7 @@ msgstr "请选择一个有效的表"
 
 #: libraries/rte/rte_triggers.lib.php:425
 msgid "You must provide a trigger definition."
-msgstr ""
+msgstr "请输入触发器定义。"
 
 #: libraries/rte/rte_words.lib.php:18
 #, fuzzy
