Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7077,10 +7077,9 @@ msgid "routine"
 msgstr "程序"
 
 #: libraries/rte/rte_words.lib.php:22
-#, fuzzy
 #| msgid "You don't have sufficient privileges to be here right now!"
 msgid "You do not have the necessary privileges to create a routine"
-msgstr "权限不足！"
+msgstr "你不具有创建程序的必要权限"
 
 #: libraries/rte/rte_words.lib.php:23
 #, fuzzy, php-format
