--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7120,10 +7120,9 @@ msgid "No trigger with name %1$s found in database %2$s"
 msgstr "在数据库 %2$s 中找不到名为 %1$s 的触发器 "
 
 #: libraries/rte/rte_words.lib.php:36
-#, fuzzy
 #| msgid "There are no files to upload"
 msgid "There are no triggers to display."
-msgstr "没有可上传的文件"
+msgstr "没有触发器"
 
 #: libraries/rte/rte_words.lib.php:42
 #, fuzzy
