--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7146,10 +7146,10 @@ msgid "You do not have the necessary privileges to create an event"
 msgstr "你不具有创建事件的必要权限"
 
 #: libraries/rte/rte_words.lib.php:47
-#, fuzzy, php-format
+#, php-format
 #| msgid "No tables found in database"
 msgid "No event with name %1$s found in database %2$s"
-msgstr "没有在数据库中找到表"
+msgstr "在数据库 %2$s 中找不到名为 %1$s 的事件"
 
 #: libraries/rte/rte_words.lib.php:48
 #, fuzzy
