--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7152,10 +7152,9 @@ msgid "No event with name %1$s found in database %2$s"
 msgstr "在数据库 %2$s 中找不到名为 %1$s 的事件"
 
 #: libraries/rte/rte_words.lib.php:48
-#, fuzzy
 #| msgid "There are no files to upload"
 msgid "There are no events to display."
-msgstr "没有可上传的文件"
+msgstr "没有事件。"
 
 #: libraries/schema/Dia_Relation_Schema.class.php:221
 #: libraries/schema/Eps_Relation_Schema.class.php:394
