--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:56+0200\n"
+"PO-Revision-Date: 2011-08-10 11:57+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1174,7 +1174,7 @@ msgstr "空闲页"
 
 #: js/messages.php:112
 msgid "Bytes sent"
-msgstr ""
+msgstr "已发送字节数"
 
 #: js/messages.php:113
 #, fuzzy
