Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:57+0200\n"
+"PO-Revision-Date: 2011-08-10 11:58+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1146,7 +1146,7 @@ msgstr "缓冲池"
 
 #: js/messages.php:104
 msgid "Free memory"
-msgstr ""
+msgstr "空闲内存"
 
 #: js/messages.php:105
 msgid "Used memory"
