--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 11:58+0200\n"
+"PO-Revision-Date: 2011-08-10 12:03+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -1159,7 +1159,7 @@ msgstr "交换空间总数"
 
 #: js/messages.php:108
 msgid "Cached Swap"
-msgstr ""
+msgstr "已缓存的交换空间"
 
 #: js/messages.php:109
 msgid "Used Swap"
