--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1166,10 +1166,9 @@ msgid "Used Swap"
 msgstr "已用交换空间"
 
 #: js/messages.php:110
-#, fuzzy
 #| msgid "Free pages"
 msgid "Free Swap"
-msgstr "空闲页"
+msgstr "空闲交换空间"
 
 #: js/messages.php:112
 msgid "Bytes sent"
