Translation update done using Pootle.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 12:14+0200\n"
+"PO-Revision-Date: 2011-08-10 12:15+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -2243,10 +2243,9 @@ msgid "Wrong username/password. Access denied."
 msgstr "用户名/密码错误。拒绝访问。"
 
 #: libraries/auth/signon.auth.lib.php:88
-#, fuzzy
 #| msgid "Config authentication"
 msgid "Can not find signon authentication script:"
-msgstr "Config 认证"
+msgstr "找不到 signon 认证脚本:"
 
 #: libraries/auth/swekey/swekey.auth.lib.php:118
 #, php-format
