--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-09 16:45+0100\n"
-"PO-Revision-Date: 2011-08-10 12:17+0200\n"
+"PO-Revision-Date: 2011-08-10 12:18+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -4301,10 +4301,9 @@ msgid ""
 msgstr "不在数据库中保存用户偏好请留空，默认：[kbd]pma_config[/kbd]"
 
 #: libraries/config/messages.inc.php:410
-#, fuzzy
 #| msgid "Currently opened table"
 msgid "Recently used table"
-msgstr "当前打开的数据表"
+msgstr "最近使用的表"
 
 #: libraries/config/messages.inc.php:411
 msgid ""
