Translation update done using Pootle.

--- a/po/cs.po
+++ b/po/cs.po
@@ -2580,11 +2580,10 @@ msgstr "Předchozí"
 #: libraries/common.lib.php:2283 libraries/common.lib.php:2286
 #: libraries/display_tbl.lib.php:370 server_binlog.php:170
 #: server_binlog.php:172
-#, fuzzy
 #| msgid "Next"
 msgctxt "Next page"
 msgid "Next"
-msgstr "Další"
+msgstr "Následující"
 
 #: libraries/common.lib.php:2284 libraries/common.lib.php:2287
 #: libraries/display_tbl.lib.php:385
