--- a/po/cs.po
+++ b/po/cs.po
@@ -9942,10 +9942,9 @@ msgid ""
 msgstr ""
 
 #: server_status.php:1436
-#, fuzzy
 #| msgid "Restore default value"
 msgid "Reset to default"
-msgstr "Obnovit výchozí hodnotu"
+msgstr "Obnovit na výchozí hodnotu"
 
 #: server_status.php:1440
 msgid "Monitor Instructions"
