--- a/po/tr.po
+++ b/po/tr.po
@@ -6993,11 +6993,10 @@ msgid "Start"
 msgstr "Başlama"
 
 #: libraries/rte/rte_events.lib.php:457
-#, fuzzy
 #| msgid "End"
 msgctxt "End of recurring event"
 msgid "End"
-msgstr "Son"
+msgstr "Bitiş"
 
 #: libraries/rte/rte_events.lib.php:465 libraries/rte/rte_routines.lib.php:912
 #: libraries/rte/rte_triggers.lib.php:354
