--- a/po/es.po
+++ b/po/es.po
@@ -1183,10 +1183,9 @@ msgid "Used memory"
 msgstr "Memoria utilizada"
 
 #: js/messages.php:107
-#, fuzzy
 #| msgid "Total"
 msgid "Total Swap"
-msgstr "Total"
+msgstr "Intercambio total"
 
 #: js/messages.php:108
 msgid "Cached Swap"
