Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -1460,7 +1460,7 @@ msgstr "Cargar página nuevamente"
 
 #: js/messages.php:180
 msgid "Affected rows:"
-msgstr ""
+msgstr "Filas afectadas:"
 
 #: js/messages.php:182
 msgid "Failed parsing config file. It doesn't seem to be valid JSON code"
