--- a/po/es.po
+++ b/po/es.po
@@ -6524,10 +6524,10 @@ msgid "Go to table"
 msgstr "Ir a la tabla"
 
 #: libraries/import.lib.php:1107
-#, fuzzy, php-format
+#, php-format
 #| msgid "Structure only"
 msgid "Structure of %s"
-msgstr "Únicamente la estructura"
+msgstr "Estructura de %s"
 
 #: libraries/import.lib.php:1113
 msgid "Go to view"
