--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 16:35+0200\n"
+"PO-Revision-Date: 2011-08-10 16:36+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -7624,11 +7624,10 @@ msgid "ltr"
 msgstr "ltr"
 
 #: libraries/select_lang.lib.php:482
-#, fuzzy
 #| msgid "pages"
 msgctxt "PDF"
 msgid "page"
-msgstr "páginas"
+msgstr "página"
 
 #: libraries/select_lang.lib.php:488 libraries/select_lang.lib.php:494
 #: libraries/select_lang.lib.php:500
