Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -9367,10 +9367,9 @@ msgid "Monitor"
 msgstr "Monitorizar"
 
 #: server_status.php:652
-#, fuzzy
 #| msgid "Apply a divisor"
 msgid "Advisor"
-msgstr "Aplicar una división"
+msgstr "Consejero"
 
 #: server_status.php:662 server_status.php:684
 msgid "Refresh rate: "
