Translation update done using Pootle.

--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 16:36+0200\n"
+"PO-Revision-Date: 2011-08-10 16:39+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -9410,6 +9410,17 @@ msgid ""
 "at a time, observe or benchmark your database, and\n"
 "        undo the change if there was no clearly measurable improvement."
 msgstr ""
+"El sistema Consejero puede proveer recomendaciones para los valores de las "
+"variables del servidor analizando las variables de estado del servidor.\n"
+"Note, sin embargo, que este sistema provee recomendaciones basándose en "
+"cálculos relativamente simples y por regla general por lo que podrían no "
+"funcioanr para su sistema.\n"
+"Antes de cambiar cualquier configuración asegúrese de saber qué es lo que "
+"está cambiando y cómo deshacer el cambio. Ajustes incorrectos pueden tener "
+"un efecto negativo en la performance.\n"
+"La mejor forma de ajustar el sistema sería sólo cambiar una configuración "
+"por vez, observar o medir la base de datos y deshacer el cambio si no hubo "
+"una mejora conmensurable."
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: server_status.php:791
