--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 16:40+0200\n"
+"PO-Revision-Date: 2011-08-10 16:42+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10297,6 +10297,11 @@ msgid ""
 "table is supported by MySQL 5.1.6 and onwards. You may still use the server "
 "charting features however."
 msgstr ""
+"Desafortunadamente, su servidor de base de datos no soporta almacenar "
+"registros a una base de datos, lo que es un requisito para analizar "
+"registros de la base de datos con phpMyAdmin. Almacenar registros a una "
+"tabla está disponible desde MySQL versión 5.1.6 y posterior. Si puede "
+"utilizar las funcionalidades para graficación del servidor."
 
 #: server_status.php:1458
 #, fuzzy
