--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 16:42+0200\n"
+"PO-Revision-Date: 2011-08-10 16:44+0200\n"
 "Last-Translator: Matías Bellone <matiasbellone@gmail.com>\n"
 "Language-Team: spanish <es@li.org>\n"
 "Language: es\n"
@@ -10304,7 +10304,6 @@ msgstr ""
 "utilizar las funcionalidades para graficación del servidor."
 
 #: server_status.php:1458
-#, fuzzy
 #| msgid ""
 #| "<b>Using the monitor:</b><br/> Ok, you are good to go! Once you click "
 #| "'Start monitor' your browser will refresh all displayed charts in a "
@@ -10328,11 +10327,12 @@ msgstr ""
 "en 'Iniciar monitorización' el navegador actualizará a intervalos regulares "
 "todos los gráficos mostrados. Puede agregar gráficos y cambiar la velocidad "
 "de actualización en la sección 'Configuración' o eliminar cualquier gráfico "
-"utilizando el icono de rueda dentada en cada gráfico. <p>Cuando vea un pico "
-"repentino de actividad, seleccione el intervalo de tiempo relevante en el "
-"gráfico manteniendo pulsado el botón izquierdo y arrastrando sobre el "
-"gráfico. Esto cargará las estadísticas de los registros, lo que lo ayudará a "
-"encontrar la causa del pico de actividad.</p>"
+"utilizando el icono de rueda dentada en cada gráfico. <p>Para mostrar las "
+"consultas de los registros, seleccione el intervalo de tiempo "
+"correspondiente en cualquier gráfico manteniendo pulsado el botón izquierdo "
+"y arrastrando sobre el gráfico. Una vez confirmado, esto cargará una tabla "
+"de consultas agrupadas donde podrá pulsar en cualquier sentencia SELECT para "
+"analizarla.</p>"
 
 #: server_status.php:1463
 msgid ""
