--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 21:06+0200\n"
+"PO-Revision-Date: 2011-08-10 21:09+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1666,6 +1666,9 @@ msgid ""
 "This table does not contain a unique column. Features related to the grid "
 "edit, checkbox, Edit, Copy and Delete links may not work after saving."
 msgstr ""
+"Bu tablo benzersiz bir sütun içermiyor. Izgara düzenlemeyle ilgili "
+"özellikler, Düzenle, Kopyala ve Sil bağlantıları kaydedildikten sonra "
+"çalışmayabilir."
 
 #: js/messages.php:268
 msgid "Generate password"
