--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 21:14+0200\n"
+"PO-Revision-Date: 2011-08-10 21:15+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3985,10 +3985,9 @@ msgid "Memory limit"
 msgstr "Bellek sınırı"
 
 #: libraries/config/messages.inc.php:319
-#, fuzzy
 #| msgid "These are Edit, Inline edit, Copy and Delete links"
 msgid "These are Edit, Copy and Delete links"
-msgstr "Bunlar Düzenle, Sıralı düzenle, Kopyala ve Sil bağlantılarıdır"
+msgstr "Bunlar Düzenle, Kopyala ve Sil bağlantılarıdır"
 
 #: libraries/config/messages.inc.php:320
 msgid "Where to show the table row links"
