Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-10 21:15+0200\n"
+"PO-Revision-Date: 2011-08-10 21:16+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4682,10 +4682,9 @@ msgid "Show function fields"
 msgstr "İşlev alanlarını göster"
 
 #: libraries/config/messages.inc.php:460
-#, fuzzy
 #| msgid "Where to show the table row links"
 msgid "Whether to show hint or not"
-msgstr "Tablo satır bağlantılarının nerede gösterileceği"
+msgstr "İpucunun gösterilip gösterilmeyeceği"
 
 #: libraries/config/messages.inc.php:461
 #, fuzzy
