--- a/po/tr.po
+++ b/po/tr.po
@@ -4689,7 +4689,7 @@ msgstr "İpucunun gösterilip gösterilmeyeceği"
 #: libraries/config/messages.inc.php:461
 #| msgid "Show indexes"
 msgid "Show hint"
-msgstr "İpucunu göster"
+msgstr "İpucu göster"
 
 #: libraries/config/messages.inc.php:462
 msgid ""
