Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4696,8 +4696,8 @@ msgid ""
 "Shows link to [a@http://php.net/manual/function.phpinfo.php]phpinfo()[/a] "
 "output"
 msgstr ""
-"[a@http://php.net/manual/function.phpinfo.php]phpinfo()[/a] çıktısına "
-"bağlantıyı gösterir"
+"[a@http://php.net/manual/function.phpinfo.php]phpinfo()[/a] çıktısı için "
+"bağlantı gösterir"
 
 #: libraries/config/messages.inc.php:463
 msgid "Show phpinfo() link"
