Translation update done using Pootle.

--- a/po/br.po
+++ b/po/br.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-09 19:26+0200\n"
+"PO-Revision-Date: 2011-08-10 22:33+0200\n"
 "Last-Translator: Fulup <fulup.jakez@ofis-bzh.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: br\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: br\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
 "X-Generator: Pootle 2.0.5\n"
 
@@ -1279,6 +1279,9 @@ msgid ""
 "than %d seconds. It is advisable to set this long_query_time 0-2 seconds, "
 "depending on your system."
 msgstr ""
+"Gweredekaet eo slow_query_log met ne enroll ar servijer nemet ar rekedoù a "
+"bad pelloc'h eget %d eilenn. Erbedet eo reizhañ long_query_time war 0-2 "
+"eilenn, hervez ho reizhiad."
 
 #: js/messages.php:137
 #, php-format
