--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2043,10 +2043,9 @@ msgid_plural "%1$d rows inserted."
 msgstr[0] "插入了 %1$d 行。"
 
 #: libraries/PDF.class.php:81
-#, fuzzy
 #| msgid "Error reading data:"
 msgid "Error while creating PDF:"
-msgstr "读取数据时发生错误:"
+msgstr "创建 PDF 时发生错误:"
 
 #: libraries/RecentTable.class.php:107
 msgid "Could not save recent table"
