--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-10 10:14-0400\n"
-"PO-Revision-Date: 2011-08-11 03:35+0200\n"
+"PO-Revision-Date: 2011-08-11 03:57+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
 "Language: zh_CN\n"
@@ -2468,7 +2468,7 @@ msgstr "在本页面编辑此查询"
 
 #: libraries/common.lib.php:1216
 msgid "Inline"
-msgstr "内联"
+msgstr "快速编辑"
 
 #: libraries/common.lib.php:1278 sql.php:938
 msgid "Profiling"
